[package]
name = "frontier-template-runtime"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/mvs-org/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
frame-support = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
frame-system = { version = "3.0.0-dev", default-features = false, package = "frame-system", git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
frame-system-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

pallet-ethereum = { version = "0.1.0", default-features = false, path = "../../frame/ethereum" }
pallet-evm = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm" }
pallet-evm-precompile-simple = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { version = "3.0.0-dev", default-features = false, path = "../../frame/evm/precompile/sha3fips" }

pallet-aura = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-balances = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-grandpa = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-randomness-collective-flip = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-sudo = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-timestamp = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-transaction-payment = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-scheduler = { default-features = false, version = '3.0.0' }


sp-api = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-block-builder = { default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers"}
sp-consensus-aura = { version = "0.9.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

sp-core = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-inherents = { default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers"}
sp-io = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-offchain = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-runtime = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-session = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-std = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-transaction-pool = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-version = { version = "3.0.0-dev", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

fp-rpc = { default-features = false, path = "../../primitives/rpc" }
# frontier-rpc-primitives = { default-features = false, git = "https://github.com/purestake/frontier", branch = "v0.3-hotfixes" }

[build-dependencies]

substrate-wasm-builder = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-scheduler/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
