[package]
name = "pallet-migrations"
version = "0.1.0"
authors = ["mvs.org"]
edition = "2018"
description = "migrations management pallet"

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
log = "0.4"
sp-std = {default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
parity-scale-codec = { version = "2.0.0", default-features = false }

[dev-dependencies]
environmental = "1.1.2"
sp-io = { version = '3.0.0' }
sp-core = { version = '3.0.0' }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
]
