[package]
name = 'ethash-rpc'
version = "1.0.0"
edition = '2018'
authors = ['MVS DevHub <https://github.com/mvs-org>']
repository = 'https://github.com/mvs-org/new-frontiers'
description = 'Ethash Algorithm RPC for external miner'
license = "GPL-3.0-or-later"

[dependencies]
# Substrate packages
# sp-api = '3.0'
sp-core = '3.0'
futures = '0.3.4'
jsonrpc-core = "15.0"
jsonrpc-derive = "15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more = "0.99.2"
parity-scale-codec = '2.0'
log = '0.4.8'

# Ethereum
# ethereum-types = "0.9.2"
ethash = { path = "../ethash" }


