[package]
name = "fp-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for metaverse consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/mvs-org/substrate/"

[dependencies]
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
ethereum = { version = "0.7.1", default-features = false, features = ["with-codec"] }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
	"ethereum/std",
	"rlp/std",
	"sha3/std",
]
