[package]
name = 'ethpow'
version = "1.0.0"
edition = '2018'
authors = ['MVS DevHub <https://github.com/mvs-org>']
repository = 'https://github.com/mvs-org/new-frontiers'
description = 'Ethash-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[dependencies]
# Substrate packages
sp-api = '3.0'
sp-consensus-pow = '0.9'
sp-core = '3.0'
sp-runtime = '3.0'
sp-blockchain = '3.0'
log = '0.4.8'

# Ethereum
sc-consensus-pow = { path = "../../consensus/consensus-pow" }
ethash = { path = "../../consensus/ethash" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ethereum-types = "0.9.2"
derive_more = "0.99.2"
parity-scale-codec = '2.0'
tempdir = "0.3"